WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137045
DebuggerCallFrame::invalidate() should invalidate all DebuggerScope chains
https://bugs.webkit.org/show_bug.cgi?id=137045
Summary
DebuggerCallFrame::invalidate() should invalidate all DebuggerScope chains
Mark Lam
Reported
2014-09-23 14:36:34 PDT
DebuggerCallFrame::invalidate() currently invalidates all DebuggerCallFrames in the debugger stack, but only invalidates the DebuggerScope chain of the top most frame. We should also invalidate all the DebuggerScope chains of the other frames in the debugger stack.
Attachments
the patch.
(2.55 KB, patch)
2014-09-23 14:41 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-09-23 14:41:30 PDT
Created
attachment 238572
[details]
the patch.
Geoffrey Garen
Comment 2
2014-09-23 15:09:01 PDT
Comment on
attachment 238572
[details]
the patch. r=me
WebKit Commit Bot
Comment 3
2014-09-23 15:29:40 PDT
Comment on
attachment 238572
[details]
the patch. Clearing flags on attachment: 238572 Committed
r173896
: <
http://trac.webkit.org/changeset/173896
>
WebKit Commit Bot
Comment 4
2014-09-23 15:29:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug