DebuggerCallFrame::invalidate() should invalidate all DebuggerScope chains. <https://webkit.org/b/137045>

Reviewed by Geoffrey Garen.

DebuggerCallFrame::invalidate() currently invalidates all DebuggerCallFrames
in the debugger stack, but only invalidates the DebuggerScope chain of the
top most frame.  We should also invalidate all the DebuggerScope chains of
the other frames in the debugger stack.

* debugger/DebuggerCallFrame.cpp:
(JSC::DebuggerCallFrame::invalidate):
* debugger/DebuggerScope.cpp:
(JSC::DebuggerScope::invalidateChain):


Canonical link: https://commits.webkit.org/154871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173896 268f45cc-cd09-0410-ab3c-d52691b4dbfc